--- a/.eslintrc
+++ b/.eslintrc
@@ -1,12 +1,14 @@
 {
-  "extends": [
-    "eslint:recommended",
-    "plugin:@typescript-eslint/recommended",
-    "plugin:react-hooks/recommended",
-    "plugin:prettier/recommended",
-    "eslint-config-prettier"
-  ],
-  "ignorePatterns": ["dist"],
-  "parser": "@typescript-eslint/parser",
-  "plugins": ["react-refresh", "prettier"]
+    "extends": [
+        "eslint:recommended",
+        "plugin:@typescript-eslint/recommended",
+        "plugin:react/recommended",
+        "plugin:react/jsx-runtime",
+        "plugin:react-hooks/recommended",
+        "plugin:prettier/recommended",
+        "eslint-config-prettier"
+    ],
+    "ignorePatterns": ["dist"],
+    "parser": "@typescript-eslint/parser",
+    "plugins": ["react-refresh", "prettier"]
 }
