--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "mobx": "^6.10.2",
         "mobx-react": "^9.0.1",
         "mobx-state-tree": "^5.2.0",
+        "preline": "^1.9.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.16.0",
@@ -31,6 +32,7 @@
         "autoprefixer": "^10.4.16",
         "eslint": "^8.45.0",
         "eslint-config-prettier": "^9.0.0",
+        "eslint-plugin-jsx-a11y": "^6.7.1",
         "eslint-plugin-prettier": "^5.0.0",
         "eslint-plugin-react": "^7.33.2",
         "eslint-plugin-react-hooks": "^4.6.0",
