--- a/.prettierrc
+++ b/.prettierrc
@@ -10,8 +10,8 @@
   "endOfLine": "auto", 
   "useTabs": false, 
   "quoteProps": "as-needed",
-  "jsxSingleQuote": false, 
-  "jsxBracketSameLine": false, 
+  "jsxSingleQuote": true, 
+  "jsxBracketSameLine": true, 
   "rangeStart": 0,
   "rangeEnd": 1, 
   "requirePragma": false, 
