--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "dev": "vite",
         "build": "tsc && vite build",
-        "lint": "eslint . --fix",
+        "lint": "eslint . --ext .ts,.tsx --fix",
         "lint:styled": "stylelint './src/**/*.ts'",
         "preview": "vite preview"
     },
