--- a/package.json
+++ b/package.json
@@ -1,50 +1,50 @@
 {
-    "name": "docker_demo",
-    "private": true,
-    "version": "0.0.0",
-    "type": "module",
-    "scripts": {
-        "dev": "vite",
-        "build": "tsc && vite build",
-        "lint": "eslint . --ext .ts,.tsx",
-        "lint:styled": "stylelint './src/**/*.ts'",
-        "preview": "vite preview"
-    },
-    "dependencies": {
-        "mobx": "^6.10.2",
-        "mobx-react": "^9.0.1",
-        "mobx-state-tree": "^5.2.0",
-        "preline": "^1.9.0",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-router-dom": "^6.16.0",
-        "uuid": "^9.0.1"
-    },
-    "devDependencies": {
-        "@types/node": "^20.6.5",
-        "@types/react": "^18.2.15",
-        "@types/react-dom": "^18.2.7",
-        "@types/react-router-dom": "^5.3.3",
-        "@types/uuid": "^9.0.4",
-        "@typescript-eslint/eslint-plugin": "^6.0.0",
-        "@typescript-eslint/parser": "^6.0.0",
-        "@vitejs/plugin-react": "^4.0.3",
-        "autoprefixer": "^10.4.16",
-        "eslint": "^8.45.0",
-        "eslint-config-prettier": "^9.0.0",
-        "eslint-plugin-jsx-a11y": "^6.7.1",
-        "eslint-plugin-prettier": "^5.0.0",
-        "eslint-plugin-react": "^7.33.2",
-        "eslint-plugin-react-hooks": "^4.6.0",
-        "eslint-plugin-react-refresh": "^0.4.3",
-        "postcss": "^8.4.30",
-        "postcss-styled-syntax": "^0.5.0",
-        "prettier": "^3.0.3",
-        "stylelint": "^15.10.3",
-        "stylelint-config-standard-scss": "^11.0.0",
-        "tailwindcss": "^3.3.3",
-        "typescript": "^5.0.2",
-        "vite": "^4.4.5",
-        "vite-plugin-eslint": "^1.8.1"
-    }
+  "name": "docker_demo",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "lint": "eslint . --ext .ts,.tsx --fix",
+    "lint:styled": "stylelint './src/**/*.ts'",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "mobx": "^6.10.2",
+    "mobx-react": "^9.0.1",
+    "mobx-state-tree": "^5.2.0",
+    "preline": "^1.9.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.16.0",
+    "uuid": "^9.0.1"
+  },
+  "devDependencies": {
+    "@types/node": "^20.6.5",
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/uuid": "^9.0.4",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "@vitejs/plugin-react": "^4.0.3",
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.45.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.3",
+    "postcss": "^8.4.30",
+    "postcss-styled-syntax": "^0.5.0",
+    "prettier": "^3.0.3",
+    "stylelint": "^15.10.3",
+    "stylelint-config-standard-scss": "^11.0.0",
+    "tailwindcss": "^3.3.3",
+    "typescript": "^5.0.2",
+    "vite": "^4.4.5",
+    "vite-plugin-eslint": "^1.8.1"
+  }
 }
