--- a/nginx.conf
+++ b/nginx.conf
@@ -51,4 +51,30 @@ http {
       root /usr/share/nginx/html;
     }
   }
+  server {
+    listen 443 ssl;
+    server_name localhost;
+    ssl_certificate /etc/nginx/certs/public.pem;
+    ssl_certificate_key /etc/nginx/certs/private.key;
+    location / {
+      # 网站根目录，此处使用容器内的路径
+      root /usr/share/nginx/html;
+      # 默认首页
+      index index.html;
+      # 尝试从磁盘找到请求的文件，如果不存在则跳转到 index.html
+      try_files $uri $uri/ /index.html;
+    }
+
+    # 定义 404 页面
+    error_page 404 /404.html;
+    location = /404.html {
+      root /usr/share/nginx/html;
+    }
+
+    # 定义 50x 页面
+    error_page 500 502 503 504 /50x.html;
+    location = /50x.html {
+      root /usr/share/nginx/html;
+    }
+  }
 }
