--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,5 +4,8 @@ services:
     build: .
     ports:
       - 80:8080
+      - 443:443
     stdin_open: true
     tty: true
+    volumes: 
+      - /data/certs:/etc/nginx/certs
