feat: change server name

--- a/nginx.conf
+++ b/nginx.conf
@@ -28,7 +28,7 @@ http {
     # 监听的端口
     listen 8080;
     # 服务器名称
-    server_name localhost;
+    server_name nfsbt.com;
 
     location / {
       # 网站根目录，此处使用容器内的路径
@@ -53,7 +53,7 @@ http {
   }
   server {
     listen 443 ssl;
-    server_name localhost;
+    server_name nfsbt.com;
     ssl_certificate /etc/nginx/certs/public.pem;
     ssl_certificate_key /etc/nginx/certs/private.key;
     location / {
